--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@
 plugins {
   // Apply the application plugin to add support for building a CLI application in Java.
   id 'application'
-  id 'org.gretty' version '4.1.3'
   id 'com.palantir.git-version' version '0.12.3'
 }
 
@@ -31,6 +30,7 @@ dependencies {
   implementation 'org.eclipse.jetty.ee10:jetty-ee10-servlet:12.0.8'
   implementation 'org.eclipse.jetty.ee10.websocket:jetty-ee10-websocket-jetty-server:12.0.8'
   implementation 'io.nayuki:qrcodegen:1.8.0'
+  implementation 'com.fathzer:javaluator:3.0.4'
 
   // Use JUnit Jupiter for testing.
   testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
